ECS Backup Files/security-groups-backup.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0a85608d166f11c59",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0548f9776dd1e0df3",
            "SecurityGroupArn": "arn:aws:ec2:ca-central-1:058264332511:security-group/sg-0a85608d166f11c59",
            "OwnerId": "058264332511",
            "GroupName": "webscraper-rds-sg",
            "Description": "Created by RDS management console",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3306,
                    "ToPort": 3306,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Source - My IP",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-09cc3100d5d1f85fb",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0548f9776dd1e0df3",
            "SecurityGroupArn": "arn:aws:ec2:ca-central-1:058264332511:security-group/sg-09cc3100d5d1f85fb",
            "OwnerId": "058264332511",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "058264332511",
                            "GroupId": "sg-09cc3100d5d1f85fb"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0fff7fc947add43e2",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0548f9776dd1e0df3",
            "SecurityGroupArn": "arn:aws:ec2:ca-central-1:058264332511:security-group/sg-0fff7fc947add43e2",
            "OwnerId": "058264332511",
            "GroupName": "webscraper-alb-sg",
            "Description": "allows access to api gateway",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow to receive requests from api gateway",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-01718326340ac5a7a",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0548f9776dd1e0df3",
            "SecurityGroupArn": "arn:aws:ec2:ca-central-1:058264332511:security-group/sg-01718326340ac5a7a",
            "OwnerId": "058264332511",
            "GroupName": "web-scraper-ecs-sg",
            "Description": "Security group for ECS tasks running the web scraper backend",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Alb can send requests to ecs",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 5000,
                    "ToPort": 5000,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "anyone can send api request to start scraping",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3306,
                    "ToPort": 3306,
                    "UserIdGroupPairs": [
                        {
                            "Description": "SECURITY GROUP SELECTED FROM RDS SO, ECS CAN COMMUNICATE WITH RDS.",
                            "UserId": "058264332511",
                            "GroupId": "sg-0a85608d166f11c59"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
